<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_normal_about">

        <Preference
            android:key="pref_official_weibo_key"
            android:title="@string/pref_official_weibo_title"
            android:summary="@string/official_weibo_link">
        </Preference>

        <Preference
            android:key="pref_thanks"
            android:title="@string/pref_thanks_title"
            android:summary="@string/pref_thanks_summary">
        </Preference>

        <Preference
            android:title="@string/pref_github_title"
            android:summary="github.com/jas0nchen/X.Ray">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/jas0nchen/X.Ray"/>
        </Preference>

        <Preference android:title="@string/pref_open_source_license_title">
            <intent
                android:targetPackage="@string/applicationId"
                android:targetClass="com.jasonchen.microlang.preference.LicenseActivity"/>
        </Preference>

        <Preference
            android:key="pref_version_key"
            android:summary="1.0 alpha"
            android:title="@string/pref_version_title" />

        <Preference
            android:key="pref_suggest_key"
            android:title="@string/pref_suggest_title">
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>