<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/userSpace">

    <ImageView
        android:id="@+id/my_cover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:background="?attr/accountBackgroundColor"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/accountBackgroundColor" />

    <RelativeLayout
        android:id="@+id/my_account"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.jasonchen.microlang.view.AvatarBigImageView
            android:id="@+id/my_avatar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/avatar_default" />

        <TextView
            android:id="@+id/my_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_below="@id/my_avatar"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textColor="?attr/accountTextColor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:textSize="12sp"
            android:text="@string/theme_exchange"
            android:textColor="?attr/accountTextColor" />

        <TextView
            android:id="@+id/exchange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:textSize="12sp"
            android:text="@string/account_exchange"
            android:textColor="?attr/accountTextColor" />

    </RelativeLayout>

</RelativeLayout>

