<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/commonBackgroundColor"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/drawer_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="51dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="left"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/drawer_home"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="15dp"
                        android:src="@drawable/ic_drawer_home" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/home"
                        android:textColor="?attr/textColor"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/drawer_at"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="2dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="15dp"
                        android:src="@drawable/ic_drawer_at" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/mention"
                        android:textColor="?attr/textColor"
                        android:textSize="15sp" />

                    <com.jasonchen.microlang.view.CircleImageView
                        android:id="@+id/mention_flag"
                        android:layout_width="5dp"
                        android:layout_height="5dp"
                        android:layout_marginLeft="20dp"
                        android:background="?attr/theme_color"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/drawer_comment"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="15dp"
                        android:src="@drawable/ic_drawer_comment" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/comment_me"
                        android:textColor="?attr/textColor"
                        android:textSize="15sp" />

                    <com.jasonchen.microlang.view.CircleImageView
                        android:id="@+id/comment_flag"
                        android:layout_width="5dp"
                        android:layout_height="5dp"
                        android:layout_marginLeft="20dp"
                        android:background="?attr/theme_color"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/drawer_fav"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="15dp"
                        android:src="@drawable/ic_drawer_fav" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/fav"
                        android:textColor="?attr/textColor"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/drawer_search"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="15dp"
                        android:src="@drawable/ic_drawer_search" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/search"
                        android:textColor="?attr/textColor"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/drawer_set"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="15dp"
                android:src="@drawable/ic_drawer_set" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/setting"
                android:textColor="?attr/textColor"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_above="@id/drawer_set"
            android:background="?attr/dividerColor" />
    </RelativeLayout>
</FrameLayout>
