<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/theme_color"
    android:paddingTop="20dp">

    <com.jasonchen.microlang.view.AvatarBigImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/header_logo_size"
        android:layout_height="@dimen/header_logo_size"
        android:layout_centerHorizontal="true"
        android:src="@drawable/avatar_default" />

    <RelativeLayout
        android:id="@+id/info"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avatar">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:singleLine="true"
            android:text="Username"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/gendel_location"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gendel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="gendel"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:text="location"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:visibility="visible" />
        </LinearLayout>

        <TextView
            android:id="@+id/verify_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/gendel_location"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="verify_reason"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:visibility="gone" />

        <com.jasonchen.microlang.view.HackyTextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/verify_reason"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="description"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="gone" />

        <com.jasonchen.microlang.view.HackyTextView
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="url"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/control_pad"
        android:layout_below="@id/info"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/weibo_list"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/status" />

        <TextView
            android:id="@+id/follow_list"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/follows" />

        <TextView
            android:id="@+id/fan_list"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/fans" />
    </LinearLayout>

    <View
        android:id="@+id/action_shadow"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/action_shadow"
        android:layout_below="@id/control_pad"/>
</RelativeLayout>
